@@ -3899,123 +3899,104 @@ argument_list|>
 name|cookieMap
 parameter_list|)
 block|{
+name|List
+argument_list|<
+name|HttpCookie
+argument_list|>
+name|cookies
+init|=
+name|HttpCookie
+operator|.
+name|parse
+argument_list|(
+name|cookieHeader
+argument_list|)
+decl_stmt|;
 for|for
 control|(
-name|String
-name|pair
+name|HttpCookie
+name|cookie
 range|:
-name|cookieHeader
-operator|.
-name|split
-argument_list|(
-literal|";"
-argument_list|)
+name|cookies
 control|)
 block|{
-name|String
-name|p
-init|=
-name|pair
-operator|.
-name|trim
-argument_list|()
-decl_stmt|;
-name|int
-name|idx
-init|=
-name|p
-operator|.
-name|indexOf
-argument_list|(
-literal|'='
-argument_list|)
-decl_stmt|;
-specifier|final
-name|String
-name|k
-decl_stmt|,
-name|v
-decl_stmt|;
 if|if
 condition|(
-name|idx
-operator|==
-operator|-
-literal|1
-condition|)
-block|{
-name|k
-operator|=
-name|p
-expr_stmt|;
-name|v
-operator|=
-literal|null
-expr_stmt|;
-block|}
-elseif|else
-if|if
-condition|(
-name|idx
-operator|==
-name|p
+name|AuthenticatedURL
 operator|.
-name|length
+name|AUTH_COOKIE
+operator|.
+name|equals
+argument_list|(
+name|cookie
+operator|.
+name|getName
 argument_list|()
+argument_list|)
 condition|)
 block|{
-name|k
-operator|=
-name|p
-operator|.
-name|substring
-argument_list|(
-literal|0
-argument_list|,
-name|idx
-operator|-
-literal|1
-argument_list|)
-expr_stmt|;
-name|v
-operator|=
-literal|null
-expr_stmt|;
-block|}
-else|else
-block|{
-name|k
-operator|=
-name|p
-operator|.
-name|substring
-argument_list|(
-literal|0
-argument_list|,
-name|idx
-argument_list|)
-expr_stmt|;
-name|v
-operator|=
-name|p
-operator|.
-name|substring
-argument_list|(
-name|idx
-operator|+
-literal|1
-argument_list|)
-expr_stmt|;
-block|}
 name|cookieMap
 operator|.
 name|put
 argument_list|(
-name|k
+name|cookie
+operator|.
+name|getName
+argument_list|()
 argument_list|,
-name|v
+name|cookie
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|cookie
+operator|.
+name|getPath
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|cookieMap
+operator|.
+name|put
+argument_list|(
+literal|"Path"
+argument_list|,
+name|cookie
+operator|.
+name|getPath
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+if|if
+condition|(
+name|cookie
+operator|.
+name|getDomain
+argument_list|()
+operator|!=
+literal|null
+condition|)
+block|{
+name|cookieMap
+operator|.
+name|put
+argument_list|(
+literal|"Domain"
+argument_list|,
+name|cookie
+operator|.
+name|getDomain
+argument_list|()
+argument_list|)
+expr_stmt|;
+block|}
+block|}
 block|}
 block|}
 annotation|@
