@@ -282,6 +282,26 @@ name|GeneralSecurityException
 import|;
 end_import
 
+begin_import
+import|import
+name|java
+operator|.
+name|net
+operator|.
+name|HttpCookie
+import|;
+end_import
+
+begin_import
+import|import
+name|java
+operator|.
+name|util
+operator|.
+name|List
+import|;
+end_import
+
 begin_class
 DECL|class|TestHttpCookieFlag
 specifier|public
@@ -779,23 +799,69 @@ operator|.
 name|openConnection
 argument_list|()
 decl_stmt|;
-name|Assert
-operator|.
-name|assertEquals
-argument_list|(
-name|AuthenticatedURL
-operator|.
-name|AUTH_COOKIE
-operator|+
-literal|"=token; "
-operator|+
-literal|"HttpOnly"
-argument_list|,
+name|String
+name|header
+init|=
 name|conn
 operator|.
 name|getHeaderField
 argument_list|(
 literal|"Set-Cookie"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|HttpCookie
+argument_list|>
+name|cookies
+init|=
+name|HttpCookie
+operator|.
+name|parse
+argument_list|(
+name|header
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+operator|!
+name|cookies
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|header
+operator|.
+name|contains
+argument_list|(
+literal|"; HttpOnly"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"token"
+operator|.
+name|equals
+argument_list|(
+name|cookies
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
@@ -860,23 +926,84 @@ name|createSSLSocketFactory
 argument_list|()
 argument_list|)
 expr_stmt|;
-name|Assert
-operator|.
-name|assertEquals
-argument_list|(
-name|AuthenticatedURL
-operator|.
-name|AUTH_COOKIE
-operator|+
-literal|"=token; "
-operator|+
-literal|"Secure; HttpOnly"
-argument_list|,
+name|String
+name|header
+init|=
 name|conn
 operator|.
 name|getHeaderField
 argument_list|(
 literal|"Set-Cookie"
+argument_list|)
+decl_stmt|;
+name|List
+argument_list|<
+name|HttpCookie
+argument_list|>
+name|cookies
+init|=
+name|HttpCookie
+operator|.
+name|parse
+argument_list|(
+name|header
+argument_list|)
+decl_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+operator|!
+name|cookies
+operator|.
+name|isEmpty
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|header
+operator|.
+name|contains
+argument_list|(
+literal|"; HttpOnly"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+name|cookies
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getSecure
+argument_list|()
+argument_list|)
+expr_stmt|;
+name|Assert
+operator|.
+name|assertTrue
+argument_list|(
+literal|"token"
+operator|.
+name|equals
+argument_list|(
+name|cookies
+operator|.
+name|get
+argument_list|(
+literal|0
+argument_list|)
+operator|.
+name|getValue
+argument_list|()
 argument_list|)
 argument_list|)
 expr_stmt|;
